# Skiplist

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  main.cpp  menu.h  result.txt  run.bat  run.sh  skiplist.h  test.h
include/: menu.h  node.h  skiplist.h
res/: sample_res.txt
src/: main.cpp  menu.cpp
stress-test/: stress-test.cpp
test/: rand.cpp
